--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            body{
+                margin: auto;
+                background-color: aqua;
+            }
+
+        </style>
         <title>Alan Wangsgard | WDD 130 Assignment Porta</title>
     </head>
     <body>
