--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            body{
-                margin: auto;
-                background-color: aqua;
-            }
 
-        </style>
-        <title>Alan Wangsgard | WDD 130 Assignment Porta</title>
-    </head>
-    <body>
-        <header>
-            <h1>WDD 130 Assignment Portal</h1>
-        </header>
-        <main>
-            <h2>Assignment Links</h2>
-            <ul>
-                <li>Week 1: <a href="#">No Web Submission</a></li>
-                <li>Week 2: <a href="site-plan.html">The Temple Inn Site Plan</a></li>
-            </ul>
-        </main>
-        <footer>
-            &copy;2020 | Alan Wangsgard | Idaho | <a href="https://www.byui.edu/online"
-                target="_blank">BYU-Idaho Online Learning</a>
-        </footer>
-    </body>
+<head>
+    <style>
+        body {
+            margin: auto;
+            background-color: aqua;
+        }
+    </style>
+    <title>Alan Wangsgard | WDD 130 Assignment Porta</title>
+</head>
+
+<body>
+    <header>
+        <h1>WDD 130 Assignment Portal</h1>
+    </header>
+    <main>
+        <h2>Assignment Links</h2>
+        <ul>
+            <li>Week 1: <a href="#">No Web Submission</a></li>
+            <li>Week 2: <a href="https://alanwangsgard.github.io/siteplan.html">The Temple Inn Site Plan</a></li>
+        </ul>
+    </main>
+    <footer>
+        &copy;2020 | Alan Wangsgard | Idaho | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+    </footer>
+</body>
+
 </html>
