--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alan Wangsgard | WDD 130 Assignment Porta</title>
     <style>
         body {
             margin: auto;
             background-color: aqua;
         }
     </style>
-    <title>Alan Wangsgard | WDD 130 Assignment Porta</title>
 </head>
 
 <body>
