--- a/siteplan.html
+++ b/siteplan.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Given</title>
     <link rel="stylesheet" type="text/css" href="css/siteplan.css">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet">
