--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <ul>
             <li>Week 1: <a href="#">No Web Submission</a></li>
             <li>Week 2: <a href="https://alanwangsgard.github.io/siteplan.html">The Temple Inn Site Plan</a></li>
+            <li>Week 3: <a href="https://alanwangsgard.github.io/fixedhtml.html">Problem With HTML</a></li>
         </ul>
     </main>
     <footer>
