--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li>Week 1: <a href="#">No Web Submission</a></li>
             <li>Week 2: <a href="https://alanwangsgard.github.io/siteplan.html">The Temple Inn Site Plan</a></li>
             <li>Week 3: <a href="https://alanwangsgard.github.io/fixedhtml.html">Problem With HTML</a></li>
+            <li>Project <a href="https://alanwangsgard.github.io/project/">Project Assignment</a></li>
         </ul>
     </main>
     <footer>
