--- a/project/index.html
+++ b/project/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1></h1>
+        <h1>placeholder</h1>
         <nav>
             <ul>
                 <li>Home</li>
