--- a/project/index.html
+++ b/project/index.html
@@ -2,9 +2,10 @@
 
 <html lang="en">
 
-<head description="The Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world.">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world.">
     <title>Temple INN And Suites | Your Home Away From Home | 208-867-5309</title>
 
 </head>
@@ -28,12 +29,8 @@
         </div>
         <section>
             <h2>Phasellus tristique fermentum nisi sed tincidunt.</h2>
-        </section>
-        <section>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada vitae nisi quis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at cursus nulla. In tortor justo, suscipit vel ante ac, iaculis maximus velit.
                 Nulla venenatis nisi orci, a venenatis lorem ullamcorper in.</p>
-        </section>
-        <section>
             <img src="../images/black.png" alt="blk img">
         </section>
     </main>
