--- a/project/index.html
+++ b/project/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world.">
     <title>Temple INN And Suites | Your Home Away From Home | 208-867-5309</title>
-
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
 <body>
@@ -15,10 +15,10 @@
         <h1>placeholder</h1>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Amenities</li>
-                <li>Temple Spotlight</li>
-                <li>Reservations</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Amenaties</a></li>
+                <li><a href="#">Temple Spotlight</a></li>
+                <li><a href="#">Reservations</a></li>
             </ul>
         </nav>
     </header>
@@ -31,16 +31,18 @@
             <h2>Phasellus tristique fermentum nisi sed tincidunt.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada vitae nisi quis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at cursus nulla. In tortor justo, suscipit vel ante ac, iaculis maximus velit.
                 Nulla venenatis nisi orci, a venenatis lorem ullamcorper in.</p>
-            <img src="../images/black.png" alt="blk img">
+            <img src="img/rsz_temp.png" alt="Temple pic">
         </section>
     </main>
 
     <footer>
         <p>contact info placeholder</p>
         <p>content placeholder</p>
-        <img src="../images/small.png" alt="small img">
-        <img src="../images/small.png" alt="small img">
-        <img src="../images/small.png" alt="small img">
+        <div class="social">
+            <a href="https://www.facebook.com/"><img src="img/fakebookrs.png" alt="Facebook img"></a>
+            <a href="https://www.youtube.com/"><img src="img/rsz_toube.png" alt="youtube img"></a>
+            <a href="https://twitter.com/explore"><img src="img/rsz_witter.png" alt="twitter img"></a>
+        </div>
     </footer>
 </body>
 
