--- a/project/index.html
+++ b/project/index.html
@@ -12,8 +12,14 @@
 
 <body>
     <header>
-        <h1>placeholder</h1>
-        <nav>
+        <picture>
+            <img src="https://cdn4.iconfinder.com/data/icons/transportation-190/1000/people_dugout_travel_boat_transportation_canoe_dugout_canoe-512.png" alt="Oars Up Rafting Logo">
+        </picture>
+        <section class="heading">
+            <h1>Oars Up Rafting</h1>
+            <div class="motto">Come Ride the Rapids with Us!</div>
+        </section>
+        <nav class="flex-container">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Amenaties</a></li>
@@ -36,13 +42,13 @@
     </main>
 
     <footer>
-        <p>contact info placeholder</p>
-        <p>content placeholder</p>
+        <p>Temple Inn & Suites Headquarters </br>355 Wisconsin Avenue</br>Bethesda, MD 20814</br>215-829-9999</br>info@templinn.com</p>
         <div class="social">
             <a href="https://www.facebook.com/"><img src="img/fakebookrs.png" alt="Facebook img"></a>
             <a href="https://www.youtube.com/"><img src="img/rsz_toube.png" alt="youtube img"></a>
             <a href="https://twitter.com/explore"><img src="img/rsz_witter.png" alt="twitter img"></a>
         </div>
+        <p>content placeholder</p>
     </footer>
 </body>
 
