--- a/project/index.html
+++ b/project/index.html
@@ -8,17 +8,13 @@
     <meta name="description" content="The Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world.">
     <title>Temple INN And Suites | Your Home Away From Home | 208-867-5309</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <picture>
-            <img src="https://cdn4.iconfinder.com/data/icons/transportation-190/1000/people_dugout_travel_boat_transportation_canoe_dugout_canoe-512.png" alt="Oars Up Rafting Logo">
-        </picture>
-        <section class="heading">
-            <h1>Oars Up Rafting</h1>
-            <div class="motto">Come Ride the Rapids with Us!</div>
-        </section>
+        <img src="img/hotel.png">
+        <h1>Temple Inn And Suites</h1>
         <nav class="flex-container">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -34,21 +30,24 @@
 
         </div>
         <section>
-            <h2>Phasellus tristique fermentum nisi sed tincidunt.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada vitae nisi quis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at cursus nulla. In tortor justo, suscipit vel ante ac, iaculis maximus velit.
-                Nulla venenatis nisi orci, a venenatis lorem ullamcorper in.</p>
-            <img src="img/rsz_temp.png" alt="Temple pic">
+            <img class="tmpl" src="img/rsz_temp.png" alt="Temple pic">
+            <div class="pcon">
+                <h2>Phasellus tristique fermentum nisi sed tincidunt.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada vitae nisi quis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at cursus nulla. In tortor justo, suscipit vel ante ac, iaculis maximus
+                    velit. Nulla venenatis nisi orci, a venenatis lorem ullamcorper in.</p>
+            </div>
         </section>
     </main>
-
     <footer>
-        <p>Temple Inn & Suites Headquarters </br>355 Wisconsin Avenue</br>Bethesda, MD 20814</br>215-829-9999</br>info@templinn.com</p>
-        <div class="social">
-            <a href="https://www.facebook.com/"><img src="img/fakebookrs.png" alt="Facebook img"></a>
-            <a href="https://www.youtube.com/"><img src="img/rsz_toube.png" alt="youtube img"></a>
-            <a href="https://twitter.com/explore"><img src="img/rsz_witter.png" alt="twitter img"></a>
+        <div class="ft">
+            <p>Temple Inn & Suites Headquarters </br>355 Wisconsin Avenue</br>Bethesda, MD 20814</br>215-829-9999</br>info@templinn.com</p>
+            <div class="social">
+                <a href="https://www.facebook.com/"><img src="img/fakebookrs.png" alt="Facebook img"></a>
+                <a href="https://www.youtube.com/"><img src="img/rsz_toube.png" alt="youtube img"></a>
+                <a href="https://twitter.com/explore"><img src="img/rsz_witter.png" alt="twitter img"></a>
+            </div>
         </div>
-        <p>content placeholder</p>
+        <p>Copyright © 2020 Temple Inn & Suites | All Rights Reserved | Privacy and Cooke Statement | Alan Wangsgard</p>
     </footer>
 </body>
 
