--- a/project/index.html
+++ b/project/index.html
@@ -18,7 +18,7 @@
         <nav class="flex-container">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Amenaties</a></li>
+                <li><a href="#">Amenities</a></li>
                 <li><a href="#">Temple Spotlight</a></li>
                 <li><a href="#">Reservations</a></li>
             </ul>
@@ -30,11 +30,21 @@
 
         </div>
         <section>
-            <img class="tmpl" src="img/rsz_temp.png" alt="Temple pic">
             <div class="pcon">
+                <h2>Aenean sagittis magna vel tortor</h2>
+                <p>Ut vitae ultrices eros. Mauris vulputate dapibus dui elementum porta. In ligula sem, sollicitudin vitae scelerisque sit amet, fermentum vel massa. Praesent accumsan varius tellus, vel vestibulum libero lacinia vitae. Nullam pellentesque
+                    ut ligula a rhoncus. Sed a faucibus sapien, ut fringilla mi. Ut facilisis nisl vitae magna consequat ullamcorper. Aliquam auctor erat nisi, at condimentum odio convallis vel. Integer at risus feugiat, gravida nulla at, tincidunt justo.</p>
+                <img class="tmpl" src="img/rsz_temp.png" alt="Temple pic">
                 <h2>Phasellus tristique fermentum nisi sed tincidunt.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada vitae nisi quis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at cursus nulla. In tortor justo, suscipit vel ante ac, iaculis maximus
+                <p>Quisque in consequat mauris, vel pellentesque dolor. Curabitur egestas enim sit amet gravida iaculis. Aliquam quis metus quam. Integer sed elementum nulla. In at lacus auctor erat pulvinar consequat. Maecenas eget pulvinar magna. Proin
+                    at tincidunt purus, vitae faucibus odio. Aliquam dignissim nisi vitae augue lobortis, et pellentesque ante pretium. Curabitur vitae tincidunt erat. Ut cursus est non metus posuere, id congue ex mattis. Curabitur molestie nunc a urna
+                    aliquam, sed tempus justo lacinia. Donec risus sem, lacinia id rhoncus ac, sollicitudin ut metus. Curabitur mattis dolor id semper sodales. Aenean et dui auctor, laoreet ex at, lacinia nunc. Aenean vitae convallis dui, vel congue urna.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada vitae nisi quis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at cursus nulla. In tortor justo, suscipit vel ante ac, iaculis maximus
                     velit. Nulla venenatis nisi orci, a venenatis lorem ullamcorper in.</p>
+                <h2>Maecenas tempor</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis sapien elit. Nullam id dui malesuada, sodales dui non, auctor nulla. Nulla volutpat turpis lectus, sit amet tincidunt felis dapibus in. Sed et consectetur dui. Proin hendrerit
+                    ex ac turpis efficitur rutrum. Donec vulputate, velit at consequat suscipit, urna est vulputate dui, sit amet tristique eros dui id leo. Phasellus pulvinar sodales vehicula. In et arcu iaculis, egestas quam eu, vehicula ligula. Proin
+                    dui eros, pulvinar at ultricies vitae, tincidunt euismod eros. Curabitur velit erat, varius vitae est quis, blandit aliquam tortor.</p>
             </div>
         </section>
     </main>
