--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li>Week 2: <a href="https://alanwangsgard.github.io/siteplan.html">The Temple Inn Site Plan</a></li>
             <li>Week 3: <a href="https://alanwangsgard.github.io/fixedhtml.html">Problem With HTML</a></li>
             <li>Project <a href="https://alanwangsgard.github.io/project/">Project Assignment</a></li>
+            <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
         </ul>
     </main>
     <footer>
