--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="img/hotel.png">
+        <img src="img/hotel.png" alt="hotel img">
         <h1>Temple Inn And Suites</h1>
         <nav class="flex-container">
             <ul>
@@ -50,11 +50,11 @@
     </main>
     <footer>
         <div class="ft">
-            <p>Temple Inn & Suites Headquarters </br>355 Wisconsin Avenue</br>Bethesda, MD 20814</br>215-829-9999</br>info@templinn.com</p>
+            <p>Temple Inn & Suites Headquarters <br> 355 Wisconsin Avenue<br> Bethesda, MD 20814<br> 215-829-9999 <br> info@templinn.com</p>
             <div class="social">
-                <a href="https://www.facebook.com/"><img src="img/fakebookrs.png" alt="Facebook img"></a>
-                <a href="https://www.youtube.com/"><img src="img/rsz_toube.png" alt="youtube img"></a>
-                <a href="https://twitter.com/explore"><img src="img/rsz_witter.png" alt="twitter img"></a>
+                <a class="one" href="https://www.facebook.com/"><img src="img/fakebookrs.png" alt="Facebook img"></a>
+                <a class="two" href="https://www.youtube.com/"><img src="img/rsz_toube.png" alt="youtube img"></a>
+                <a class="three" href="https://twitter.com/explore"><img src="img/rsz_witter.png" alt="twitter img"></a>
             </div>
         </div>
         <p>Copyright © 2020 Temple Inn & Suites | All Rights Reserved | Privacy and Cooke Statement | Alan Wangsgard</p>
