--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img src="img/hotel.png" alt="hotel img">
+        <img src="img/hotel.png" alt="hotel">
         <h1>Temple Inn And Suites</h1>
         <nav class="flex-container">
             <ul>
@@ -30,18 +30,39 @@
 
         </div>
         <section>
+            <div class="hero">
+                <img src="rsz_temp2.jpg" alt="temple">
+                <div class="action">
+                    <h3>
+                        Plan your next adventure with us!
+                    </h3>
+                    <button>Contact Us</button>
+                </div>
+            </div>
             <div class="pcon">
-                <h2>Aenean sagittis magna vel tortor</h2>
-                <p>Ut vitae ultrices eros. Mauris vulputate dapibus dui elementum porta. In ligula sem, sollicitudin vitae scelerisque sit amet, fermentum vel massa. Praesent accumsan varius tellus, vel vestibulum libero lacinia vitae. Nullam pellentesque
-                    ut ligula a rhoncus. Sed a faucibus sapien, ut fringilla mi. Ut facilisis nisl vitae magna consequat ullamcorper. Aliquam auctor erat nisi, at condimentum odio convallis vel. Integer at risus feugiat, gravida nulla at, tincidunt justo.</p>
-                <img class="tmpl" src="img/rsz_temp.png" alt="Temple pic">
-                <h2>Phasellus tristique fermentum nisi sed tincidunt.</h2>
-                <p>Quisque in consequat mauris, vel pellentesque dolor. Curabitur egestas enim sit amet gravida iaculis. Aliquam quis metus quam. Integer sed elementum nulla. In at lacus auctor erat pulvinar consequat. Maecenas eget pulvinar magna. Proin
-                    at tincidunt purus, vitae faucibus odio. Aliquam dignissim nisi vitae augue lobortis, et pellentesque ante pretium. Curabitur vitae tincidunt erat. Ut cursus est non metus posuere, id congue ex mattis. Curabitur molestie nunc a urna
-                    aliquam, sed tempus justo lacinia. Donec risus sem, lacinia id rhoncus ac, sollicitudin ut metus. Curabitur mattis dolor id semper sodales. Aenean et dui auctor, laoreet ex at, lacinia nunc. Aenean vitae convallis dui, vel congue urna.
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada vitae nisi quis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at cursus nulla. In tortor justo, suscipit vel ante ac, iaculis maximus
-                    velit. Nulla venenatis nisi orci, a venenatis lorem ullamcorper in.</p>
-                <h2>Maecenas tempor</h2>
+                <div class="par1">
+                    <h2>Your Home Away From Home</h2>
+                    <p>Quisque in consequat mauris, vel pellentesque dolor. Curabitur egestas enim sit amet gravida iaculis. Aliquam quis metus quam. Integer sed elementum nulla. In at lacus auctor erat pulvinar consequat. Maecenas eget pulvinar magna. Proin
+                        at tincidunt purus, vitae faucibus odio. Aliquam dignissim nisi vitae augue lobortis, et pellentesque ante pretium. Curabitur vitae tincidunt erat. Ut cursus est non metus posuere, id congue ex mattis. Curabitur molestie nunc a
+                        urna aliquam, sed tempus justo lacinia. Donec risus sem, lacinia id rhoncus ac, sollicitudin ut metus. Curabitur mattis dolor id semper sodales. Aenean et dui auctor, laoreet ex at, lacinia nunc. Aenean vitae convallis dui, vel
+                        congue urna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada vitae nisi quis egestas. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at cursus nulla. In tortor justo, suscipit vel ante
+                        ac, iaculis maximus velit. Nulla venenatis nisi orci, a venenatis lorem ullamcorper in.</p>
+                </div>
+                <div class="par2">
+                    <img src="img/placeimg.png" alt="placeholder">
+                </div>
+                <div class="par3">
+                    <img src="img/placeimg.png" alt="placeholder">
+                </div>
+                <div class="par4">
+                    <h2>Wedding Receptions</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis sapien elit. Nullam id dui malesuada, sodales dui non, auctor nulla. Nulla volutpat turpis lectus, sit amet tincidunt felis dapibus in. Sed et consectetur dui. Proin
+                        hendrerit ex ac turpis efficitur rutrum. Donec vulputate, velit at consequat suscipit, urna est vulputate dui, sit amet tristique eros dui id leo. Phasellus pulvinar sodales vehicula. In et arcu iaculis, egestas quam eu, vehicula
+                        ligula. Proin dui eros, pulvinar at ultricies vitae, tincidunt euismod eros. Curabitur velit erat, varius vitae est quis, blandit aliquam tortor.</p>
+                </div>
+            </div>
+            <div class="par5">
+                <h2>Family Search Center</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis sapien elit. Nullam id dui malesuada, sodales dui non, auctor nulla. Nulla volutpat turpis lectus, sit amet tincidunt felis dapibus in. Sed et consectetur dui. Proin hendrerit
                     ex ac turpis efficitur rutrum. Donec vulputate, velit at consequat suscipit, urna est vulputate dui, sit amet tristique eros dui id leo. Phasellus pulvinar sodales vehicula. In et arcu iaculis, egestas quam eu, vehicula ligula. Proin
                     dui eros, pulvinar at ultricies vitae, tincidunt euismod eros. Curabitur velit erat, varius vitae est quis, blandit aliquam tortor.</p>
@@ -50,7 +71,14 @@
     </main>
     <footer>
         <div class="ft">
-            <p>Temple Inn & Suites Headquarters <br> 355 Wisconsin Avenue<br> Bethesda, MD 20814<br> 215-829-9999 <br> info@templinn.com</p>
+            <div class="foot">
+                <img class="i1" src="location.png" alt="location">
+                <p class="p1">Inn & Suites Headquarters <br> 355 Wisconsin Avenue<br> Bethesda, MD 20814</p>
+                <img class="i2" src="phone.png" alt="phone">
+                <p class="p2">215-829-9999</p>
+                <img class="i3" src="email.png" alt="email">
+                <p class="p3">info@templinn.com</p>
+            </div>
             <div class="social">
                 <a class="one" href="https://www.facebook.com/"><img src="img/fakebookrs.png" alt="Facebook img"></a>
                 <a class="two" href="https://www.youtube.com/"><img src="img/rsz_toube.png" alt="youtube img"></a>
