--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Project <a href="https://alanwangsgard.github.io/project/">Project Assignment</a></li>
             <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
             <li>Week 9
-                <a href="final-site-plan.html"></a>Final Site plan</li>
+                <a href="final-site-plan.html">Final Site plan</a></li>
         </ul>
     </main>
     <footer>
