--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <li>Week 3: <a href="https://alanwangsgard.github.io/fixedhtml.html">Problem With HTML</a></li>
             <li>Project <a href="https://alanwangsgard.github.io/project/">Project Assignment</a></li>
             <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
-            <li>Week 9
-                <a href="final-site-plan.html">Final Site plan</a></li>
+            <li>Week 9<a href="final-site-plan.html">Final Site plan</a></li>
+            <li><a href="form.html">Form Assignment</a></li>
         </ul>
     </main>
     <footer>
