--- a/project/index.html
+++ b/project/index.html
@@ -17,10 +17,10 @@
         <h1>Temple Inn And Suites</h1>
         <nav class="flex-container">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Amenities</a></li>
-                <li><a href="#">Temple Spotlight</a></li>
-                <li><a href="#">Reservations</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="amenities.html">Amenities</a></li>
+                <li><a href="temple.html">Temple Spotlight</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,7 @@
         </div>
         <section>
             <div class="hero">
-                <img src="rsz_temp2.jpg" alt="temple">
+                <img src="img/rsz_temp2.jpg" alt="temple">
                 <div class="action">
                     <h3>
                         Plan your next adventure with us!
@@ -72,11 +72,11 @@
     <footer>
         <div class="ft">
             <div class="foot">
-                <img class="i1" src="location.png" alt="location">
+                <img class="i1" src="img/location.png" alt="location">
                 <p class="p1">Inn & Suites Headquarters <br> 355 Wisconsin Avenue<br> Bethesda, MD 20814</p>
-                <img class="i2" src="phone.png" alt="phone">
+                <img class="i2" src="img/phone.png" alt="phone">
                 <p class="p2">215-829-9999</p>
-                <img class="i3" src="email.png" alt="email">
+                <img class="i3" src="img/email.png" alt="email">
                 <p class="p3">info@templinn.com</p>
             </div>
             <div class="social">
