--- a/project/temple.html
+++ b/project/temple.html
@@ -25,8 +25,40 @@
         </nav>
     </header>
     <main>
-        <h2 class="amen">Temple Spotlight</h2>
         <img src="img/rsz_temp2.jpg" alt="temple">
+        <h2 class="amen">Temple Spotlight</h2>
+        <hr>
+
+        <div class="templediv">
+            <h2>Idaho Falls Idaho Temple</h2>
+            <hr>
+            <img src="img/realtm.jpg" alt="Idaho Falls temple">
+        </div>
+        <hr>
+        <div class="tmplinfo">
+            <div class="tm1">
+                <h2>Location</h2>
+                <p>1000 Memorial Dr<br> Idaho Falls ID 83402-3410 <br>United States</p>
+            </div>
+            <div class="tm2">
+                <h2>Phone</h2>
+                <p>(1) 208-522-7669</p>
+            </div>
+            <div class="tm3">
+                <h2>Email</h2>
+                <p>Log in to send email to temple</p>
+            </div>
+            <div class="tm4">
+                <h2>Services</h2>
+                <p>Clothing rental available<br>Cafeteria available <br>No patron housing available <br>Distribution center nearby</p>
+            </div>
+            <div class="tm5">
+                <hr>
+                <h2>More Information</h2>
+                <p>Ordinances for family names must be done in proper sequence—baptism, confirmation, Melchizedek Priesthood ordination (males), initiatory, endowment, and then sealing. Please allow sufficient time to perform all the ordinances you wish
+                    to complete during your visit. For additional help and information, please call the temple.</p>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="ft">
