--- a/project/temple.html
+++ b/project/temple.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world.">
-    <title>Temple Spotlight</title>
+    <title>Temple Spotlight | Temple INN And Suites | Your Home Away From Home | 208-867-5309</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 </head>
@@ -26,11 +26,9 @@
     </header>
     <main>
         <img src="img/rsz_temp2.jpg" alt="temple">
-        <h2 class="amen">Temple Spotlight</h2>
-        <hr>
 
         <div class="templediv">
-            <h2>Idaho Falls Idaho Temple</h2>
+            <h2>Temple Spotlight: Idaho Falls Idaho Temple</h2>
             <hr>
             <img src="img/realtm.jpg" alt="Idaho Falls temple">
         </div>
