--- a/final-site-plan.html
+++ b/final-site-plan.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/final-site-plan.css">
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>A+ Fitness</title>
 </head>
 
@@ -36,8 +37,14 @@
                 <td class="accent2">#A6B1E1</td>
             </tr>
         </table>
-        <h4>Normal paragraph example</h4>
-        <p>Rule number one for ataining your goals and continuing to mae progress, is consistancy. Don't give up and quit. keep going and working hard.</p>
+        <h4>Font</h4>
+        <h4>Heading Font: Source Sans Pro</h4>
+        <p>I like this font. It's pretty neat</p>
+        <h4>Wireframes</h4>
+        <img src="images/wire4.jpg" alt="wireframe4">
+        <img src="images/wire3.jpg" alt="wireframe3">
+        <img src="images/wire2.jpg" alt="wireframe2">
+        <img src="images/wire1.jpg" alt="wireframe1">
         <h3>Navigation</h3>
         <nav>
             <ul>
