--- a/final_project.html
+++ b/final_project.html
@@ -4,6 +4,8 @@
 <head>
     <title>A+ Fitness</title>
     <link rel="stylesheet" type="text/css" href="css/finalcss.css">
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,19 +28,23 @@
             <img src="images/rlgmage.jpg" alt="gym">
         </div>
         <div>
-            <h2>waka waka</h2>
-            <p>is this the content you are looking for you absolute potato</p>
+            <h2>Welcome To A+ Fitness!</h2>
+            <p>So, you want to get into fitness, but don't know where to start? No Problem! Take a look around our website and you'll find everything you need! it's not as hard as you might think! Don't know what to do, when you get to the gym? Check out
+                our workouts section! Have a question? check out the FAQ page and see if there is an answer there! Want to know how much to lift after you choose an exerscise? Visit the Calculatos page!
+            </p>
         </div>
         <div class="hro">
             <img src="images/yeye.jpg" alt="more gym">
         </div>
         <div>
-            <h2>solid</h2>
-            <p>ah yes page</p>
+            <h2>Some Basic Information</h2>
+            <p>Getting into fitness can be intimidating. There are so many different components to consider. It can be hard to know if you are doing something wrong or right.
+
+            </p>
         </div>
     </div>
     <footer>
-        This is the footer
+        <p class="copy">Copyright © 2020 A+ Fitness | All Rights Reserved | Privacy and Cookie Statement | Alan Wangsgard</p>
     </footer>
 </body>
 
