--- a/final_project.html
+++ b/final_project.html
@@ -30,20 +30,30 @@
         <div>
             <h2>Welcome To A+ Fitness!</h2>
             <p>So, you want to get into fitness, but don't know where to start? No Problem! Take a look around our website and you'll find everything you need! it's not as hard as you might think! Don't know what to do, when you get to the gym? Check out
-                our workouts section! Have a question? check out the FAQ page and see if there is an answer there! Want to know how much to lift after you choose an exerscise? Visit the Calculatos page!
+                our workouts section! Have a question? check out the FAQ page and see if there is an answer there! Want to know how much to lift after you choose an exercise? Visit the Calculatos page! We have everything you need in order to start your
+                journey!
             </p>
+            <hr>
         </div>
         <div class="hro">
             <img src="images/yeye.jpg" alt="more gym">
         </div>
         <div>
             <h2>Some Basic Information</h2>
-            <p>Getting into fitness can be intimidating. There are so many different components to consider. It can be hard to know if you are doing something wrong or right.
+            <p>Getting into fitness can be intimidating. There are so many different components to consider. It can be hard to know if you are doing something wrong or right. One thing that is important to remember is that things won’t happen overnight.
+                It takes time, often a lot longer than expected to achieve our goals. The key to getting there is persistence. You have to be willing to put in the work and work hard. Sometime you may feel tired, or you may just want a break from the
+                gym for a day. That’s alright. It happens to everyone. As long as you get back after a day or two you will be ok. When it comes to achieving your fitness goals consistency is key. Consistency does not mean that you have to go every single
+                day. You have to come up with a plan that you can stick to. Having a gym routine, and an eating plan will help tremendously. If you just wing it in the moment it is a lot easier to not work as hard in the gym, or eat junk food. A plan
+                is always helpful.
 
             </p>
+            <hr>
         </div>
     </div>
     <footer>
+        <p class="con">Contact Us: <br> <img src="images/phone.png" alt="phone"> 777-777-7777 <br> <img src="images/email.png" alt="email"> A+Fitness@gmail.com</p>
+        <a class="conn" href="final-site-plan.html">Site Plan</a>
+        <hr>
         <p class="copy">Copyright © 2020 A+ Fitness | All Rights Reserved | Privacy and Cookie Statement | Alan Wangsgard</p>
     </footer>
 </body>
