--- a/final_project.html
+++ b/final_project.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>A+ Fitness</title>
+    <title>A+ Fitness Home</title>
     <link rel="stylesheet" type="text/css" href="css/finalcss.css">
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -16,10 +16,10 @@
         </div>
         <nav class="hd2">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Workouts</a></li>
-                <li><a href="#">Calculators</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="final_project.html">Home</a></li>
+                <li><a href="final_pro_Work.html">Workouts</a></li>
+                <li><a href="final_pro_calc.html">Calculators</a></li>
+                <li><a href="final_pro_faq.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
@@ -52,7 +52,7 @@
     </div>
     <footer>
         <p class="con">Contact Us: <br> <img src="images/phone.png" alt="phone"> 777-777-7777 <br> <img src="images/email.png" alt="email"> A+Fitness@gmail.com</p>
-        <a class="conn" href="final-site-plan.html">Site Plan</a>
+        <a class="conn" href="final-site-plan.html">Final Site Plan</a>
         <hr>
         <p class="copy">Copyright © 2020 A+ Fitness | All Rights Reserved | Privacy and Cookie Statement | Alan Wangsgard</p>
     </footer>
