--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li>Week 6: <a href="week6-layout.html">CSS Positioning</a></li>
             <li>Week 9<a href="final-site-plan.html">Final Site plan</a></li>
             <li><a href="form.html">Form Assignment</a></li>
+            <li><a href="final_project.html">Final Project</a></li>
         </ul>
     </main>
     <footer>
