--- a/final_pro_Work.html
+++ b/final_pro_Work.html
@@ -23,6 +23,18 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="work">
+            <div>
+                <h2>Workout 1</h2>
+                <p></p>
+            </div>
+            <div>
+                <h2>Workout 2</h2>
+                <p></p>
+            </div>
+        </div>
+    </main>
     <footer>
         <p class="con">Contact Us: <br> <img src="images/phone.png" alt="phone"> 777-777-7777 <br> <img src="images/email.png" alt="email"> A+Fitness@gmail.com</p>
         <a class="conn" href="final-site-plan.html">Final Site Plan</a>
