--- a/final_pro_faq.html
+++ b/final_pro_faq.html
@@ -23,6 +23,49 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <img src="images/gymfaq.jpg" alt="gym">
+        <div class="faqm">
+            <div class="one">
+                <h2>Henlo squidward</h2>
+                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+            </div>
+            <div class="two">
+                <h2>Henlo squidward</h2>
+                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+            </div>
+        </div>
+        <div class="faqm">
+            <div class="one">
+                <h2>Henlo squidward</h2>
+                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+            </div>
+            <div class="two">
+                <h2>Henlo squidward</h2>
+                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+            </div>
+        </div>
+        <div class="faqm">
+            <div class="one">
+                <h2>Henlo squidward</h2>
+                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+            </div>
+            <div class="two">
+                <h2>Henlo squidward</h2>
+                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+            </div>
+        </div>
+        <div class="faqm">
+            <div class="one">
+                <h2>Henlo squidward</h2>
+                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+            </div>
+            <div class="two">
+                <h2>Henlo squidward</h2>
+                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+            </div>
+        </div>
+    </main>
     <footer>
         <p class="con">Contact Us: <br> <img src="images/phone.png" alt="phone"> 777-777-7777 <br> <img src="images/email.png" alt="email"> A+Fitness@gmail.com</p>
         <a class="conn" href="final-site-plan.html">Final Site Plan</a>
