--- a/final_pro_faq.html
+++ b/final_pro_faq.html
@@ -27,41 +27,41 @@
         <img src="images/gymfaq.jpg" alt="gym">
         <div class="faqm">
             <div class="one">
-                <h2>Henlo squidward</h2>
+                <h2>placeholder</h2>
                 <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
             </div>
             <div class="two">
-                <h2>Henlo squidward</h2>
+                <h2>placeholder</h2>
                 <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
             </div>
         </div>
         <div class="faqm">
             <div class="one">
-                <h2>Henlo squidward</h2>
+                <h2>placeholder</h2>
                 <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
             </div>
             <div class="two">
-                <h2>Henlo squidward</h2>
+                <h2>placeholder</h2>
                 <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
             </div>
         </div>
         <div class="faqm">
             <div class="one">
-                <h2>Henlo squidward</h2>
+                <h2>placeholder</h2>
                 <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
             </div>
             <div class="two">
-                <h2>Henlo squidward</h2>
+                <h2>placeholder</h2>
                 <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
             </div>
         </div>
         <div class="faqm">
             <div class="one">
-                <h2>Henlo squidward</h2>
+                <h2>placeholder</h2>
                 <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
             </div>
             <div class="two">
-                <h2>Henlo squidward</h2>
+                <h2>placeholder</h2>
                 <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
             </div>
         </div>
