--- a/final_pro_faq.html
+++ b/final_pro_faq.html
@@ -27,42 +27,47 @@
         <img src="images/gymfaq.jpg" alt="gym">
         <div class="faqm">
             <div class="one">
-                <h2>placeholder</h2>
-                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+                <h2>Can I really Lose 10 pounds? in only a month?</h2>
+                <p>The short answer for the vast majority of people is no. There are many ads and "Supplements that claim they can work miricles and help you lose extreme amounts of weight in almost no time. These claims are a majority of the time, fake.
+                    They are often just after consumers who want to lose weight or gain muscle quickly. It works because everyone wants things to happen now."</p>
             </div>
             <div class="two">
-                <h2>placeholder</h2>
-                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+                <h2>How long will it take to achieve my goals?</h2>
+                <p>That depends. If you want to lose tons of weight or gain lots of muscle, it will take time. things do not happen exactly as we wish they would, and it often takes people a lot longer than they want to achieve their goals. </p>
             </div>
         </div>
         <div class="faqm">
             <div class="one">
-                <h2>placeholder</h2>
-                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+                <h2>Do i need supplements?</h2>
+                <p>Do you need them? no. Will they help? yes. While supplements can be helpful and will provide some extra nutrients, it is important to have your eating habits under control first. If you Take a protein powder, but still eat a bag of chips,
+                    a pizza, and things like that everyday, there isn't really a point in taking supplements.</p>
             </div>
             <div class="two">
-                <h2>placeholder</h2>
-                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+                <h2>What Diet should I use?</h2>
+                <p>None. Don't go on a diet. If you want to make changes, achieve goals, and keep the results you have to make a lifestyle change. A diet implies that it is temporary, and once you get what you want you will stop and go right back to eating
+                    like garbage.</p>
             </div>
         </div>
         <div class="faqm">
             <div class="one">
-                <h2>placeholder</h2>
-                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+                <h2>How often do I need to go to the gym?</h2>
+                <p>That depends on a few things. How long will you stay, what is your goal, etc. The more you go to the gym the more results you will get.At the same time however, you don't want to go to often or you will overtrain, and potentially hurt
+                    yourself. Find what works for you. Do you want to get results quicker? go more.</p>
             </div>
             <div class="two">
-                <h2>placeholder</h2>
-                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+                <h2>Do I need a gym?</h2>
+                <p>No, in reality you do not need a gym. There are many other ways that you can get fit and achieve goals, but in my experience, it is eeasier to achieve your goals when ypu go to the gym. One reason being that they have a lot of equiptment
+                    that many individuals don't have.</p>
             </div>
         </div>
         <div class="faqm">
             <div class="one">
-                <h2>placeholder</h2>
-                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+                <h2>What is the best exercise?</h2>
+                <p>There is no best exercise. there are different excersises for different muscle groups that all contribute. It is good to do a mixture of exercises.</p>
             </div>
             <div class="two">
-                <h2>placeholder</h2>
-                <p>wwsbefiwbvlibaeilvbaebvlabelrvblaebvibeabvlabelrvbaervblaeb</p>
+                <h2>How much protein should I eat?</h2>
+                <p>A common recomendation for those wanting to gain muscle, is to eat one gram of protein per pound of body wweight. So if I weighed 150 Pounds, I should eat about 150 Grams of protein to gain weight.</p>
             </div>
         </div>
     </main>
