--- a/final_pro_calc.html
+++ b/final_pro_calc.html
@@ -25,15 +25,14 @@
     </header>
     <main>
         <div class="info">
-            <img>
+            <div class="hro"><img src="images/run.jpg" alt="run"></div>
             <h2>What is bmi?</h2>
-            <p></p>
-            <img>
+            <p>Body mass index (BMI) is a measure of body fat based on height and weight that applies to adult men and women. Calculating your BMI can give you a basic understanding of where your health is at.</p>
+            <p>The BMI breakdowns are: <br>Underweight = Below 18.5 <br>Normal weight = 18.5–24.9
+                <br>Overweight = 25–29.9 <br>Obesity = BMI of 30 or greater </p>
+            <div class="hro"><img src="images/weight.jpg" alt="weight"></div>
             <h2>What can I do with my percentages?</h2>
-            <p></p>
-            <img>
-            <h2>Why is this relavent?</h2>
-            <p></p>
+            <p>Your max percentages can help you become stronger. If you incorperate different weights, depending on your abilities, you will become stronger. If you need suggestions for how to incorperate these, visit the workout page!</p>
         </div>
         <div class="calc">
             <div class="bmi">
@@ -47,7 +46,7 @@
                 <p id="result1"></p>
             </div>
             <div class="set">
-                <h2>Calculate Your Sets</h2>
+                <h2>Calculate Your Max Percentages</h2>
                 <p>What is Your 1 Rep Max?</p>
                 <input id="max" type="number" name="max"><br>
                 <button onclick="perc()">Calculate</button>
