--- a/final_pro_faq.html
+++ b/final_pro_faq.html
@@ -24,7 +24,9 @@
         </nav>
     </header>
     <main>
-        <img src="images/gymfaq.jpg" alt="gym">
+        <div class="hro">
+            <img src="images/gymfaq.jpg" alt="gym">
+        </div>
         <div class="faqm">
             <div class="one">
                 <h2>Can I really Lose 10 pounds? in only a month?</h2>
