--- a/final_pro_Work.html
+++ b/final_pro_Work.html
@@ -27,7 +27,7 @@
         <div class="work">
             <div>
                 <h2>Workout 1</h2>
-                <p></p>
+                <p>5 Days a week, MWF Chest Shoulders, Triceps, TT Legs, Back, Biceps <br> MWF Chest: Bench Press, Incline Dumbell Bench, Decline Bench</p>
             </div>
             <div>
                 <h2>Workout 2</h2>
